@@ -35,12 +35,24 @@ Dirs=Graphics
 Files=jsaTextureCache.cpp/jsaTextureCache.h/jsaVRAMManager.cpp/jsaVRAMManager.h/TextUI3D.cfg/TextUI3D.cpp/TextUI3D.h/TextUI3D_Panel.cpp/TextUI3D_Panel.h/TextUI3D_WindowManager_HSM.cpp/TextUI3D_WindowManager_HSM.h
 
 [Dir Plugins]
-Dirs=FSServer_FTPD/UI_Graphics/UI_Text/UI_Text3D/APP_NetScan/APP_JView/APP_Retawq
+Dirs=FSServer_FTPD/UI_Graphics/UI_Text/UI_Text3D/APP_NetScan/APP_JView/APP_Retawq/APP_Links2
 Files=UI_Exports.exp/FSS_Exports.exp/FSS_Exports.h/Common.cpp/Common.h/UI_Interface.cpp/UI_Interface.h/APP_Exports.exp/APP_Exports.h
 
 [Dir Plugins/APP_JView]
 Dirs=
 Files=Makefile/APP_JView.S
+
+[Dir Plugins/APP_Links2]
+Dirs=links-2.1pre20
+Files=
+
+[Dir Plugins/APP_Links2/links-2.1pre20]
+Dirs=doc/graphics/intl/parser/psp/Unicode
+Files=acconfig.h/aclocal.m4/af_unix.c/arrow.inc/atheos.cpp/auth.c/AUTHORS/beos.c/bfu.c/bits.h/block.c/bookmarks.c/BRAILLE_HOWTO/BUGS/builtin.c/builtin.h/builtin_keys.h/cache.c/cfg.h/ChangeLog/charsets.c/charsets.c.rej/codepage.h/codepage.inc/config.cache/config.guess/config.h.in/config.log/config.sub/configure/configure.in/connect.c/context.c/cookies.c/COPYING/default.c/default.c.rej/dip.c/directfb.c/directfb_cursors.h/dither.c/dns.c/drivers.c/entity.inc/error.c/file.c/finger.c/font_include.c/framebuffer.c/ftp.c/gif.c/html.c/html_gr.c/html_r.c/html_tbl.c/http.c/https.c/img.c/imgcache.c/INSTALL/install-sh/ipret.c/ipret.h/javascr.c/javascript.c/javascript.h/jpeg.c/jsint.c/kbd.c/KEYS/language.c/language.h/language.inc/links.1/links.h/links_16x16_1.xpm/links_16x16_2.xpm/links_32x32.xpm/links_icon.c/Links_logo.png/listedit.c/lru.c/mailcap.pl/mailto.c/main.c/Makefile.am/Makefile.in/md5.c/md5.h/md5hl.c/memory.c/menu.c/missing/mkinstalldirs/NEWS/ns.c/ns.h/objreq.c/os_dep.c/os_dep.h/os_depx.h/PATCH-gpm-1.20.0-smooth-cursor/pmshell.c/png.c/pomocny.c/README/rebuild/regexp.c/sched.c/sdl.c/sdl_data.inc/select.c/session.c/setup.h/SITES/smb.c/stamp-h.in/struct.h/svgalib.c/terminal.c/tiff.c/TODO/tree.h/types.c/typy.h/uni_7b.inc/url.c/view.c/view_gr.c/win32.c/x.c/xbm.c
+
+[Dir Plugins/APP_Links2/links-2.1pre20/psp]
+Dirs=
+Files=confdefs.h/config.cache/config.h/config.log/config.status/configure-psp/configure-psp2/Makefile/stamp-h/Makefile.psp/plugin_main.c/psp.c/psp.h
 
 [Dir Plugins/APP_NetScan]
 Dirs=
@@ -48,7 +60,7 @@ Files=main.c/Makefile
 
 [Dir Plugins/APP_Retawq]
 Dirs=docu/i18n/tool
-Files=.config/configure/configure.act/configure.base/cookie.c/COPYING/cursesbi.c/cursesbi.h/cursesx.c/cursesx.h/init.c/init.h/init.o/INSTALL/main.c/Makefile/Makefile-classical/ncurses.h/parser.c/parser.h/README/renderer.c/resource.c/resource.h/stuff.c/stuff.h/tgmode.inc/wk.c/psp_curses.c/psp_curses.h/plugin_main.c
+Files=.config/configure/configure.act/configure.base/cookie.c/COPYING/cursesbi.c/cursesbi.h/cursesx.c/cursesx.h/init.c/init.h/init.o/INSTALL/main.c/Makefile/Makefile-classical/ncurses.h/parser.c/parser.h/README/renderer.c/resource.c/resource.h/stuff.c/stuff.h/tgmode.inc/wk.c/psp_curses.c/psp_curses.h/plugin_main.c/tips.html
 
 [Dir Plugins/FSServer_FTPD]
 Dirs=
@@ -87,7 +99,7 @@ Dirs=
 Files=main.cpp/Makefile/main.c
 
 [Dir SharedLib]
-Dirs=Logging/libiniparser/PSPApp/Tools/pthread
+Dirs=Logging/libiniparser/PSPApp/Tools/libpthread
 Files=Makefile
 
 [Dir SharedLib/Logging]
@@ -117,6 +129,10 @@ Files=in.h/ip.h/tcp.h/tcpip.h/udp.h
 [Dir SharedLib/libpspnet/sys]
 Dirs=
 Files=socket.h
+
+[Dir SharedLib/libpthread]
+Dirs=
+Files=Makefile/pthread.c/pthread.h
 
 [Dir SharedLib/pthread]
 Dirs=
