@@ -3,6 +3,7 @@ What's New for PSPRadio
 
 0.38.09 (r) (2006-04-x)
 NEW FEATURES
+(raf) Dyn/Retawq: tips can be overriden with your own html. Just replace APP_Retawq/tips.html!
 BUG FIXES
 (raf) Core: Networking. Network profile enumeration code modification. Based on idea from Danzel from ps2dev forums. This may help people who's profile wasn't showing up.
 (raf) Dyn/Core: No longer tries to 'continue' a plugin if 'Off' is selected.
